feat: implement select button

--- a/example/package.json
+++ b/example/package.json
@@ -23,7 +23,8 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
-		"react-native-builder-bob": "^0.40.10"
+		"react-native-builder-bob": "^0.40.10",
+		"react-native-svg": "^15.11.2"
 	},
 	"private": true
 }
