--- a/example/package.json
+++ b/example/package.json
@@ -4,28 +4,29 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "expo start",
+		"start:tunnel": "expo start --tunnel",
 		"android": "expo start --android",
 		"ios": "expo start --ios",
 		"web": "expo start --web"
 	},
 	"dependencies": {
-		"@expo/metro-runtime": "~5.0.4",
+		"@expo/metro-runtime": "~6.1.2",
 		"@react-navigation/native": "^7.1.9",
 		"@react-navigation/native-stack": "^7.3.13",
-		"expo": "~53.0.9",
-		"expo-status-bar": "~2.2.3",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
-		"react-native": "0.79.2",
-		"react-native-safe-area-context": "^5.4.0",
-		"react-native-screens": "^4.10.0",
-		"react-native-web": "~0.20.0"
+		"expo": "^54.0.23",
+		"expo-status-bar": "~3.0.8",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-native": "0.81.5",
+		"react-native-safe-area-context": "~5.6.0",
+		"react-native-screens": "~4.16.0",
+		"react-native-web": "^0.21.0"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.0",
 		"react-native-builder-bob": "^0.40.10",
-		"react-native-gesture-handler": "^2.25.0",
-		"react-native-svg": "^15.11.2"
+		"react-native-gesture-handler": "~2.28.0",
+		"react-native-svg": "15.12.1"
 	},
 	"private": true
 }
